--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <!-- HEADER -->
     <header id="header">
       <div id="cont_img">
+        <!-- LA FOTO DE PERFIL SE COLOCA AQUI, SIMPLEMENTE CAMBIA "...yo.jpg" POR EL NOMBRE Y EXTENSION DE TU FOTO. -->
+        <!-- IMPORTANTE!!! LA FOTO COLOCALA DENTRO DE LA CARPETA "foto_perfil" QUE SE ENCUENTRA ALOJADA DENTRO DE LA CARPETA "assets"
         <img id="foto_perfil_" src="./assets/foto_perfil/yo.jpg" alt="Foto de perfil, en el que se muestra la cara del propietario del curriculum">
       </div>
 
