--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="icon" type="image/png" sizes="192x192" href="./android-chrome-192x192.png">
 
   <!-- Archivo utilizado para cargar los estilos definidos -->
-  <link rel="stylesheet" href="../styles/style.css" media="all">
+  <link rel="stylesheet" href="./styles/style.css" media="all">
 
   <meta name="keywords" content=""> <!-- Maximo 12 terminos con 2 palabras maximo por termino -->
   <meta name="description" content=""> <!-- Maximo 97 caracteres -->
